Fixed spacing between images on portfolio page

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-img{
-margin-top: auto;
-
+img {
+  padding: 20px;
+  border-width: 5px;
+ 
 }
-
